--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
   <script src="https://cdn.jsdelivr.net/npm/tsparticles@2/tsparticles.bundle.min.js"></script>
   <script src="https://unpkg.com/scrollreveal"></script>
   <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
-  <script src="dist/script.js"></script>
+  <script src="src/script.js"></script>
 </body>
 
 </html>
