update boston housing price

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
       class="group w-full flex flex-col md:flex-row items-center md:items-start justify-center gap-8 cursor-pointer rounded-xl border-2 border-transparent hover:border-purple-500 transition-all duration-300 p-8">
       <!-- Left: Image -->
       <div class="flex justify-center w-full md:w-1/2">
-        <img src="assets/1_D6s2K1y7kjE14swcgITB1w.png" alt="Project 1"
+        <img src="assets/dashboard_boston.png" alt="Project 1"
           class="w-full max-w-md rounded-xl shadow-lg object-contain bg-white transition-all duration-300 group-hover:scale-105 border-4 border-purple-600 group-hover:border-purple-400">
       </div>
       <!-- Right: Description -->
